--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
   "license": "MIT",
   "dependencies": {
     "@supercharge/promise-pool": "^2.4.0",
-    "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.55",
     "puppeteer": "^19.11.1",
-    "swc-node": "^1.0.0",
+    "ts-node": "^10.9.1",
     "tsc": "^2.0.4",
     "typescript": "^5.0.4"
   },
   "scripts": {
-    "scrape": "yarn swc-node src/run.ts"
+    "scrape": "yarn ts-node src/run.ts"
   }
 }
